# gomoku-core

./: Cargo.toml  README.md
.github/workflows/: actionlint.yml  release.yml  review.yml
examples/: simple-gomoku.rs  simple-marubatsu.rs
src/: lib.rs
